# IIIT-Dharwad-Automated-Timetable-Scheduler

./: .gitignore  Debug&Design_DPR(1).tex  README.md  pyproject.toml  requirements.txt  timetable_input.xlsx
data/: classrooms.xlsx  courses.xlsx  professors.xlsx
output/: output.xlsx
src/: config.py  config_py.py  main.py  main_py.py  scheduler.py  scheduler_py.py  utils.py  utils_py.py
