[project]
name = "automated-timetable-iiitd"
version = "0.1.0"
description = "Automated timetable scheduling system for IIIT Dharwad"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "openpyxl",
    "numpy"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
